--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Página home</h1>
     <a href="vendas.html">Ir para a página de vendas</a>
+    <p>Toda a loja com 50% de desconto!</p>
 </body>
 </html>
