--- a/vendas.html
+++ b/vendas.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página de vendas</h1>
+    <h1>Página de veNdas</h1>
     <a href="index.html">Ir para a página inicial</a>
 </body>
 </html>
